@@ -96,9 +96,10 @@
       L648, 35:R#.26   @znote merida 山地车
       L654, 36:R#.27   @shader
       L700, 37:R#.28   @DirectX Tool Kit
-     Zndex_E : //z 2015-10-06 00:21:08 L.86 '85132 T173268648 .K ~869 +----+----+----+----+----+
+     Zndex_E : //z 2015-10-08 11:44:24 L.84 '44136 T1271589103.K ~883 +----+----+----+----+----+
      TimeCnt : //z 2015-10-05 21:05:30 L.87 '10470 T732247271 .K ~47  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-10-05 21:05:28 L.87 '10472 T732247246 .K ~34  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-10-08 11:36:09 L.84 '44631 T1270474995.K ~35  +----+----+----+----+----+
+     #35  R+ : //z 2015-10-08 11:36:09 L.84 '44631 T1270474995.K ~35    V+.905  L+.961  
      #34  R+ : //z 2015-10-05 21:05:28 L.87 '10472 T732247246 .K ~34    V+.893  L+.950  
      #33  R+ : //z 2015-09-30 11:02:00 L.92 '46680 T1247420550.K ~33    V+.865  L+.924  
      #32  R+ : //z 2015-09-29 00:25:55 L.93 '84845 T2957396635.K ~32    V+.816  L+.888  
@@ -137,7 +138,9 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-10-06 00:21:08 L.86 '85132 T173268648 .K ~903   R+.34   L+.955  --+----+
+     Version : //z 2015-10-08 11:44:24 L.84 '44136 T1271589103.K ~918   R+.35   L+.961  --+----+
+     #48  V+ : //z 2015-10-08 11:40:33 L.84 '44367 T1271445387.K ~912   R+.35   L+.961  
+     #47  R+ : //z 2015-10-08 11:36:09 L.84 '44631 T1270474995.K ~905   R+.35   L+.962  V+.905  
      #47  R+ : //z 2015-10-05 21:05:28 L.87 '10472 T732247246 .K ~893   R+.34   L+.951  V+.893  
      #46  V+ : //z 2015-09-30 11:05:33 L.92 '46467 T1247528463.K ~874   R+.33   L+.931  
      #45  R+ : //z 2015-09-30 11:02:00 L.92 '46680 T1247420550.K ~865   R+.33   L+.925  V+.865  
@@ -954,3 +957,11 @@ http://www.realtimerendering.com/blog/tag/directcompute/
 1、中管选用31.8合适最常用的前拔口径，安装更方便
 2、座杆适用27.2的管径
 #endregion //z 2015-10-05 21:05:28 L.87 '10472 BG57IV3@BYH T732247246 .K.F4146951713-+----+----+
+
+#region 10-08 11:36 R#.35   @svn E155037 以前的操作没有完成
+01. svn: E155037: 以前的操作没有完成；如果它被中断，请执行“svn cleanup”
+看起来， svn处理命令时有时会卡住获取/ 操作。 所有这些操作将存储在数据库文件中的wc.db .svn文件夹。 
+
+sqlite3.exe .svn/wc.db "select * from work_queue"
+sqlite3.exe .svn/wc.db "delete from work_queue"
+#endregion //z 2015-10-08 11:36:09 L.84 '44631 BG57IV3@XCL T1270474995.K.F4146951713-+----+----+
