@@ -1,0 +1,137 @@
+﻿/* #FH  //z 2015-10-08 11:17:27 L.84 '45753 BG57IV3@XCL T1268139154.K.F2564861307----+----+----+
++  0.FileInfo: +----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+        File : E:\MyDoc\GitHub\ZNginx\Doc\K\T.2015.pXr.cs.F2564861307-+----+----+----+----+----+
+       Motto : No one can make you feel inferior without your consent.+----+----+----+----+----+
+       Motto : The death of fear is in doing what you fear to do.+----+----+----+----+----+----+
+       Motto : It's hard to beat a person who never gives up.----+----+----+----+----+----+----+
+       Motto : Take what you do seriously. Not yourself.----+----+----+----+----+----+----+----+
+       Motto : Life begins where your comfort zone ends.----+----+----+----+----+----+----+----+
+       Motto : To know and not do, is not yet to know.-+----+----+----+----+----+----+----+----+
+       Motto : The more you do , the more you can do.--+----+----+----+----+----+----+----+----+
+       Motto : Do what you do best, better.--+----+----+----+----+----+----+----+----+----+----+
+       Motto : Get Your Hands Dirty.----+----+----+----+----+----+----+----+----+----+----+----+
+      Author : 126.org@gmail.com (R) Kaizen (->30,T5,M&M,W)-+----+----+----+----+----+----+----+
+
++  1.ID & Desc: ----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  2.Req & Repro: --+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  3.Folder & File: +----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  4.Cause & Solution: --+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  5.Todo & Done: --+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  6.Commit: --+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  7.Issue: ---+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  8.Summary: -+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+    //z 2015-10-08 11:17:39 L.84 '45741 T1268139189.K[T1,L30,R-1,V3]
+    8.01 todo/done/review
+    
++  9.Misc: ----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
+***********************************************************************************************/
+
+#region 10-08 11:17 R#.0    @Ver.Info
+       Zey_S : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
+		R#
+        zbottom
+       Zey_E : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
+       Zcl_S : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
+       Zcl_E : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
+     Zndex_S : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
+     Zndex_E : //z 2015-10-08 11:20:47 L.84 '45553 T1269073582.K ~20  +----+----+----+----+----+
+     TimeCnt : //z 2015-10-08 11:20:22 L.84 '45578 T1269073511.K ~2   +----+----+----+----+----+
+     Reg.Cnt : //z 2015-10-08 11:19:23 L.84 '45637 T1268211024.K ~3   +----+----+----+----+----+
+     #3   R+ : //z 2015-10-08 11:19:23 L.84 '45637 T1268211024.K ~3     V+.14   L+.133  
+     #2   R+ : //z 2015-10-08 11:19:16 L.84 '45644 T1268210994.K ~2     V+.12   L+.114  
+     #1   R+ : //z 2015-10-08 11:18:47 L.84 '45673 T1268175157.K ~1     V+.9    L+.94   
+     File.Op : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
+     Version : //z 2015-10-08 11:20:47 L.84 '45553 T1269073582.K ~23    R+.1    L+.97   --+----+
+     #1   V+ : //z 2015-10-08 11:20:23 L.84 '45577 T1269073512.K ~19    R+.1    L+.95   
+     #0   R+ : //z 2015-10-08 11:19:23 L.84 '45637 T1268211024.K ~14    R+.3    L+.134  V+.14   
+     #0   R+ : //z 2015-10-08 11:19:16 L.84 '45644 T1268210994.K ~12    R+.2    L+.115  V+.12   
+     #0   R+ : //z 2015-10-08 11:18:47 L.84 '45673 T1268175157.K ~9     R+.1    L+.95   V+.9    
+     K   Ter : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
+     K  Mers : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
+     K Kersi : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
+     KVersio : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
+     K Versi : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
+     K  Vers : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
+     K   Ver : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
+     K    Ve : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
+     K     V : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
+     KaizenZ : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
+#endregion //z 2015-10-08 11:17:27 L.84 '45753 BG57IV3@XCL T1268139154.K.F2564861307-+----+----+
+
+#region 10-08 11:18 R#.1    @第2015年总结 zbottom
+Year.Plan
+	01. 
+Year.Done
+	01. 
+Year.Kaizen
+	01. 
+
+M2015.01 
+	01. 
+M2015.02 
+	01. 
+M2015.03 
+	01. 
+M2015.04 
+	01. 
+M2015.05 
+	01. 
+M2015.06 
+	01. 
+M2015.07 
+	01. 
+M2015.08 
+	01. 
+M2015.09 
+	01. 
+M2015.10 
+    //z 2015-10-08 11:20:22 L.84 '45578 T1269073511.K[T2,L95,R1,V19]
+	01. 建档。
+M2015.11 
+	01. 
+M2015.12 
+	01. 
+#endregion //z 2015-10-08 11:18:47 L.84 '45673 BG57IV3@XCL T1268175157.K.F2564861307-+----+----+
+
+#region 10-08 11:19 R#.2    @第2015.10月总结 zbottom
+Month.Plan
+	01. 
+Month.Done
+	01. 
+Month.Kaizen
+	01. 
+
+W39，2015-10-04 - 2015-10-10 
+	01. 
+W40，2015-10-11 - 2015-10-17 
+	01. 
+W41，2015-10-18 - 2015-10-24 
+	01. 
+W42，2015-10-25 - 2015-10-31 
+	01. 
+#endregion //z 2015-10-08 11:19:16 L.84 '45644 BG57IV3@XCL T1268210994.K.F2564861307-+----+----+
+
+#region 10-08 11:19 R#.3    @第40周总结 2015-10-04 --> 2015-10-10
+Week.Plan
+	01. 
+Week.Done
+	01. 
+Week.Kaizen
+	01. 
+
+日，R.2015-10-04 
+一，W.2015-10-05 
+二，W.2015-10-06 
+三，W.2015-10-07 
+四，W.2015-10-08 
+五，W.2015-10-09 
+六，R.2015-10-10 
+#endregion //z 2015-10-08 11:19:23 L.84 '45637 BG57IV3@XCL T1268211024.K.F2564861307-+----+----+
